--- a/WebMvc/Views/Home/DriverWaiting.cshtml
+++ b/WebMvc/Views/Home/DriverWaiting.cshtml
@@ -1,3 +1,3 @@
-<h1>Awaiting approval</h1>
+<h2>Driver Waiting Room</h2>
 <p>You haven't been approved as a driver yet, please come back later</p>
 <a asp-action="Index">Back to Login</a>
