--- a/WebMvc/Views/Home/LoopView.cshtml
+++ b/WebMvc/Views/Home/LoopView.cshtml
@@ -3,7 +3,8 @@
     ViewData["Title"] = "Loop List";
 }
 <h2>Loop List</h2>
-<a asp-action="HomeView">Back to List</a>
+<a asp-action="HomeView" class="btn">Back to List</a>
+<a asp-action="LoopCreate" class="btn">Create a new Loop</a>
 <table class="table">
     <thead>
         <tr>
@@ -32,4 +33,25 @@
         }
     </tbody>
 </table>
-<a asp-action="LoopCreate">Create a new Loop</a>
+
+
+<style>
+        .table{
+        font-size: 30px;
+    }
+    .btn {
+        display: inline-block;
+        padding: 10px 20px;
+        margin: 5px;
+        background-color: #007bff;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+        font-size: 25px;
+    }
+    
+    .btn:hover {
+        background-color: #0056b3;
+    }
+</style>
