--- a/WebMvc/Views/Home/StopView.cshtml
+++ b/WebMvc/Views/Home/StopView.cshtml
@@ -2,8 +2,10 @@
 @{
     ViewData["Title"] = "Stop List";
 }
-<h2>Stop List</h2>
-<a asp-action="HomeView">Back to List</a>
+<h1>Stop List</h1>
+<a asp-action="HomeView" class="btn">Back to List</a>
+<a asp-action="StopCreate" class="btn">Create a new Stop</a>
+<div class="container">
 <table class="table">
     <thead>
         <tr>
@@ -44,4 +46,25 @@
         }
     </tbody>
 </table>
-<a asp-action="StopCreate">Create a new Stop</a>
+</div>
+
+<style>
+        .table{
+        font-size: 30px;
+    }
+    .btn {
+        display: inline-block;
+        padding: 10px 20px;
+        margin: 5px;
+        background-color: #007bff;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+        font-size: 25px;
+    }
+    
+    .btn:hover {
+        background-color: #0056b3;
+    }
+</style>
